--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -1,4 +1,4 @@
-<div class="ext-datepicker">
+<div class="datepicker">
   <div class="form-control" ng-click="isOpen=true">{{value | date:'yyyy-MM-dd'}}</div>
   <picker-wrapper class="picker-wrapper" ng-if="isOpen">
     <div ng-show="view==='year'" class="year">
