--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -1,39 +1,40 @@
 <div class="datepicker">
-  <div class="form-control" ng-click="isOpen=true">{{value | date:'yyyy-MM-dd'}}</div>
-  <picker-wrapper class="picker-wrapper" ng-if="isOpen">
-    <div ng-show="view==='year'" class="year">
+  <div class="form-control" ng-click="$ctrl.isOpen=true">{{$ctrl.value | date:'yyyy-MM-dd'}}</div>
+  <picker-wrapper class="picker-wrapper" ng-if="$ctrl.isOpen">
+    <div ng-show="$ctrl.view==='year'" class="year">
       <div class="header clearfix">
-        <div class="prev"><a ng-click="prevYears()">前</a></div>
-        <div class="current">{{current.getFullYear()-5}}-{{current.getFullYear()+6}}</div>
-        <div class="next"><a ng-click="nextYears()">后</a></div>
+        <div class="prev"><a ng-click="$ctrl.prev()">‹</a></div>
+        <div class="current">{{$ctrl.current.year()-5}}-{{$ctrl.current.year()+6}}</div>
+        <div class="next"><a ng-click="$ctrl.next()">›</a></div>
       </div>
       <ul class="clearfix">
-        <li ng-repeat="y in getYears()"><a ng-click="setView('month') && setCurrent('year',y)"
-                                           href="javascript:void(0)">{{y}}</a>
+        <li ng-repeat="y in $ctrl.years" ng-class="{'value':$ctrl.value.getFullYear()===y}">
+          <a ng-click="$ctrl.setCurrent({year:y}) && $ctrl.setView('month')" href="javascript:void(0)">{{y}}</a>
         </li>
       </ul>
     </div>
-    <div ng-show="view=='month'" class="month">
+    <div ng-show="$ctrl.view=='month'" class="month">
       <div class="header clearfix">
-        <div class="prev"><a href="javascript:void(0)" ng-click="current.setFullYear(current.getFullYear()-1)">前</a>
+        <div class="prev"><a href="javascript:void(0)" ng-click="$ctrl.prev()">‹</a>
         </div>
-        <div class="current"><a ng-click="setView('year')" href="javascript:void(0)">{{current.getFullYear()}}</a></div>
-        <div class="next"><a href="javascript:void(0)" ng-click="current.setFullYear(current.getFullYear()+1)">后</a>
+        <div class="current"><a ng-click="$ctrl.setView('year')" href="javascript:void(0)">{{$ctrl.current.year()}}</a>
+        </div>
+        <div class="next"><a href="javascript:void(0)" ng-click="$ctrl.next()">›</a>
         </div>
       </div>
       <ul class="clearfix">
-        <li ng-repeat="m in months"><a ng-click="setView('day') && setCurrent('month',m)"
-                                       href="javascript:void(0)">{{m+1}}</a></li>
+        <li ng-repeat="m in $ctrl.months" ng-class="{'value':$ctrl.value.getMonth()===m}">
+          <a ng-click="$ctrl.setCurrent({month:m}) && $ctrl.setView('day')" href="javascript:void(0)">{{m+1}}</a></li>
       </ul>
     </div>
-    <div ng-show="view=='day'" class="day">
+    <div ng-show="$ctrl.view=='day'" class="day">
       <div class="header clearfix">
-        <div class="prev"><a ng-click="prevMonth()">前</a></div>
+        <div class="prev"><a ng-click="$ctrl.prev()">‹</a></div>
         <div class="current">
-          <a ng-click="setView('month')"
-             href="javascript:void(0)">{{current.getFullYear()}}年{{current.getMonth()+1}}月</a>
+          <a ng-click="$ctrl.setView('month')"
+             href="javascript:void(0)">{{$ctrl.current.year()}}年{{$ctrl.current.month()+1}}月</a>
         </div>
-        <div class="next"><a ng-click="nextMonth()">后</a></div>
+        <div class="next"><a ng-click="$ctrl.next()">›</a></div>
       </div>
       <ul class="clearfix">
         <li>日</li>
@@ -45,8 +46,9 @@
         <li>六</li>
       </ul>
       <ul class="clearfix">
-        <li ng-repeat="d in getDays()"><a ng-click="setCurrent('date',d) && toHour()"
-                                          href="javascript:void(0)">{{d}}</a>
+        <li ng-repeat="d in $ctrl.days"
+            ng-class="{'value':$ctrl.value.getMonth()===d.month && $ctrl.value.getDate()===d.date,'notcurrent':$ctrl.current.month()!==d.month}">
+          <a ng-click="$ctrl.setCurrent(d) && $ctrl.setView('hour',d) " href="javascript:void(0)">{{d.date}}</a>
         </li>
       </ul>
     </div>
