将弹框替换为ui-bootstrap的dropdown 增加min-view属性，用于设置组件的最小试图模式 增加format属性,用于自定义日期格式话样式

--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -1,6 +1,7 @@
-<div class="datepicker">
-  <div class="form-control" ng-click="$ctrl.open()">{{$ctrl.value | date:'yyyy-MM-dd'}}</div>
-  <picker-wrapper class="picker-wrapper" ng-if="$ctrl.isOpen">
+<div class="datepicker" uib-dropdown is-open="$ctrl.isOpen" auto-close="outsideClick">
+  <div ng-if="$ctrl.getDisabled()" class="form-control">{{$ctrl.value | date:$ctrl.format}}</div>
+  <div ng-if="!$ctrl.getDisabled()" uib-dropdown-toggle class="form-control">{{$ctrl.value | date:$ctrl.format}}</div>
+  <div uib-dropdown-menu class="picker-wrapper">
     <div ng-show="$ctrl.view==='year'" class="year">
       <div class="header clearfix">
         <div class="prev"><a ng-click="$ctrl.prev()">‹</a></div>
@@ -53,5 +54,5 @@
       </ul>
     </div>
     <div ng-show="view=='hour'">小时视图</div>
-  </picker-wrapper>
+  </div>
 </div>
